@@ -9,9 +9,10 @@ git log --pretty --graph > ChangeLog
 
 aclocal -I./m4
 autoconf
-automake --add-missing --force-missing
+automake -a
 
-#./configure --enable-openmp || exit
-./configure --enable-openmp FCFLAGS="-O3" || exit 1
-#./configure || exit 1
+#./configure --enable-openmp || exit 1
+./configure --enable-openmp --enable-maintainer-mode FCFLAGS="-O3" || exit 1
+#./configure || exit
 make || exit 1
+cp src/* ../temp_bins/temp-openmp
